# CAKE

./: .gitmodules  Cargo.toml  LICENSE  README.md  config.yml  devbox.json
.cargo/: config.toml
crate_patched/arrow-data-52.2.0/: Cargo.toml
crate_patched/arrow-data-52.2.0/src/: data.rs  lib.rs
crate_patched/arrow-data-52.2.0/src/equal/: mod.rs  primitive.rs
crate_patched/arrow-select-52.2.0/: Cargo.toml
crate_patched/arrow-select-52.2.0/src/: filter.rs  lib.rs
queries/: dsb.jsonl  imdb.jsonl  stack.jsonl
src/: aggregate.rs  archon.rs  configuration.rs  cusfilter.rs  expression.rs  hash.rs  hashjoin.rs  lang.rs  lib.rs  parquet.rs  parquet_cache.rs  perf_manager.rs  pipeline.rs  predicate.rs  query_dsl.rs  regret_tree.rs  sort.rs  spool.rs  ticket_ht.rs  utils.rs  xor_filter.rs
src/dispatchers/: cake.rs  cake_bs.rs  mod.rs  regret_tree.rs  simple_models.rs  ucb.rs
src/kernels/: chunking.rs  filter.rs  metrics.rs  mod.rs  query_plan.rs  sort.rs
src/selection/: mod.rs  sel_intersect.rs
