[package]
name = "arrow-quiver"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
# Suppress warnings
# author = "Ryan Marcus <ryan@ryanmarc.us>"

[features]
# Internal-only hooks used by perf/benchmark binaries.
bench = []

[dependencies]

chrono = "=0.4.38"
arrow-arith = "52.1"
arrow-array = "52.1"
arrow-cast = "52.1"
arrow-schema = "52.1"
arrow-ord = "52.1"
arrow-buffer = "52.1"
arrow-select = "52.1"
arrow-string = "52.1"
cpu-time = "1.0.0"

mimalloc = { version = "0.1", default-features = false, features = ["secure"] }

schnellru = "0.2.4"
fnv = "1.0.7"
itertools = "0.13.0"
parquet = "52.2.0"
paste = "1.0.15"
xorf = "0.11.0"
fastrand = "2.1.0"
indicatif = "0.17.8"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9"
fs2 = "0.4"
bincode = "1.3"
ordered-float = "4.2.0"
argminmax = { version = "0.6.2", default-features = false, features = ["float", "ndarray"] }
raw-cpuid = "11.0.2"
log = "0.4.22"
env_logger = "0.11.3"
memchr = "2.7.4"
clap = {version = "4.5.21", features = ["derive"]}
walkdir = "2.4.0"
zmq = "0.10.0"

egg = "0.9.5"

num-bigint = "0.4.6"

uuid = { version = "1.17.0", features = ["v4", "serde"] }

random_word = { version = "0.4.3", features = ["en"] }
num = "0.4.3"
crossbeam = "0.8.4"

lazy_static = "1.5.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3"

ndarray = { version = "0.16.1", features = ["serde", "blas"] }
ndarray-stats = "0.6.0"
csv = "1.3"
pprof = { version = "0.15.0", features = ["criterion", "flamegraph"] }
num_enum = "0.7.4"
blas-src = { version = "0.10", default-features = false, features = ["openblas"] }
rayon = "1.10.0"

[dev-dependencies]
criterion = { version = "0.5.0", features = ["html_reports"] }
rayon = "1.10.0"

[target.'cfg(all(target_os = "linux", any(target_arch = "x86", target_arch = "x86_64")))'.dependencies]
perfcnt = "0.8.0"
perf-event2 = "0.7"
criterion-perf-events = "0.4.0"


[patch.crates-io]
arrow-select = {path = "crate_patched/arrow-select-52.2.0"}
arrow-data = {path = "crate_patched/arrow-data-52.2.0"}

[profile.release]
debug = true

[[bin]]
name = "tune"
test = false
bench = false
